# inbox

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.toml
inbox/: __init__.py  config.py  main.py
inbox/db/: __init__.py  db.py
inbox/db/models/: inbox.py  message.py  models.py
inbox/routers/: auth.py  inboxes.py  messages.py
