[tool.poetry]
name = "inbox"
version = "0.1.0"
description = "An API that allows anyone to POST a public inbox that can be fetched by the instance owner."
authors = ["slashtechno <77907286+slashtechno@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
dynaconf = "^3.2.6"
sqlmodel = "^0.0.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
